// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given {"codeSuggestions": [Object]} 1`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given {"codeSuggestions": [Object]} 2`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given {"codeSuggestions": [Object]} 3`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "3/4",
  "value": 75,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_acceptance_rate given {"codeSuggestions": [Object]} 4`] = `
{
  "identifier": "code_suggestions_acceptance_rate",
  "tooltip": "0/20",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {"codeContributorsCount": 5} 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {"codeContributorsCount": 10, "codeSuggestions": [Object]} 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "5/10",
  "value": 50,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {"codeContributorsCount": 10, "codeSuggestions": [Object]} 2`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "0/10",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns code_suggestions_usage_rate given {"codeSuggestions": [Object]} 1`] = `
{
  "identifier": "code_suggestions_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given {"duoAssignedUsersCount": 3} 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given {"duoAssignedUsersCount": 8, "duoChatContributorsCount": 7} 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "7/8",
  "value": 87.5,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given {"duoAssignedUsersCount": 50, "duoChatContributorsCount": 0} 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "0/50",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_chat_usage_rate given {"duoChatContributorsCount": 4} 1`] = `
{
  "identifier": "duo_chat_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given {"duoAssignedUsersCount": 3} 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given {"duoAssignedUsersCount": 8, "rootCauseAnalysisUsersCount": 5} 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "5/8",
  "value": 62.5,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given {"duoAssignedUsersCount": 50, "rootCauseAnalysisUsersCount": 0} 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "0/50",
  "value": 0,
}
`;

exports[`AI impact dashboard api extractGraphqlAiData returns duo_rca_usage_rate given {"rootCauseAnalysisUsersCount": 10} 1`] = `
{
  "identifier": "duo_rca_usage_rate",
  "tooltip": "No data",
  "value": "-",
}
`;
